tests/anon_fn_missing_param_type_bad.stderr
tests/anon_fn_missing_param_type_bad.hop:2:10: error: HOP1008: parameter 'x' is missing type
