tests/anon_fn_missing_param_type_bad.hop
fn main() {
	f := fn(x) int {
		return x
	}
	_ = f
}
